# NET-ROS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_ekomforskriften.py  003_add_risk_acceptance.py  004_add_framework_versioning.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  actions.py  assets.py  audit.py  auth.py  dashboard.py  documents.py  ekomforskriften.py  export.py  information_assets.py  projects.py  reports.py  reviews.py  risks.py  suppliers.py  users.py
app/core/: __init__.py  deps.py  security.py
app/models/: __init__.py  action.py  asset.py  audit.py  base.py  department.py  document.py  ekomforskriften.py  information_asset.py  nsm.py  project.py  review.py  risk.py  supplier.py  user.py
app/schemas/: __init__.py  action.py  asset.py  dashboard.py  department.py  document.py  ekomforskriften.py  information_asset.py  project.py  review.py  risk.py  supplier.py  user.py
app/services/: __init__.py  audit_service.py  export_service.py  report_service.py  risk_service.py
app/templates/: base.html
app/templates/components/: risk_matrix.html  risk_matrix_skeleton.html
app/templates/pages/: dashboard.html  login.html  reports.html
app/templates/pages/actions/: detail.html  list.html
scripts/: __init__.py  create_admin.py  init_ekomforskriften.py  init_nsm_principles.py
static/css/: style.css
static/js/: app.js
tests/: __init__.py
(+6 files in other folders)
