[project]
name = "netros"
version = "0.1.0"
description = "ROS-analyseverktøy for NEAS - Risiko og sårbarhetsanalyse"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NEAS", email = "drift@neas.no"}
]
keywords = ["ros", "risiko", "sikkerhet", "nkom", "nsm"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.1.3",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "weasyprint>=61.0",
    "pynetbox>=7.3.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.2",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
